--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="vika">
             <img src="./vika.png" alt="Віка">
             <p>Пам'ятай, ти неймовірна людина! Ти добра, щедра, весела, розумна і завжди готова прийти на допомогу.
-            Нехай цей день народження стане для тебе незабутнім! Бажаю тобі феєричного свята, яскравих емоцій, приємних сюрпризів та виконання всіх твоїх бажань!</p>
+            Нехай цей день народження стане для тебе незабутнім! Бажаю тобі феєричного свята та яскравих емоцій!</p>
         </div>
     </div>
     <script src="./index.js"></script>
